# CppTransplant

./: .editorconfig  .gitignore  ASTConsumerBat.h  CMakeLists.txt  FrontendAction.h  MatchCallbackBat.h  README.md  all.h  main.cpp  main2.cpp
include/: mfc.h
test/: test.cpp  test.cppOut.cpp  testAST.cpp
working/: mfc.h
